[package]
name = "mf-speak"
version = "0.1.0"
edition = "2024"
description = "A spicy little command wrapper that provides audible feedback with attitude"
authors = ["arvindell"]
license = "MIT"
repository = "https://github.com/arvindell/mf"
keywords = ["command-line", "utility", "productivity", "text-to-speech"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "mf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
